# convert_file_to_html_ia

./: .gitignore  README.md  pyproject.toml
app/: main.py  routes.py
app/services/: ai_assistants.py  file_handler.py  html_converter.py
app/services/prompts/: conversor_prompt.txt
tem_files/: 202409constancia.docx
