[tool.poetry]
name = "convert-file-to-html"
version = "0.1.0"
description = ""
authors = ["jesustr20 <jesus.tr61@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-docx = "^1.1.2"
pypdf2 = "^3.0.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
autogen = "^0.7.1"
autogen-agentchat = "^0.4.2"
autogen-ext = {extras = ["openai"], version = "^0.4.2"}
sqlalchemy = "^2.0.37"
pdfplumber = "^0.11.5"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.20"
generativeai = "^0.0.1"
google-generativeai = "^0.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
